--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <th>Hobbies</th>
     </tr>
     <tr>
-      <td>Samuel Jones</td>
+      <td>Samuel Jeon</td>
       <td>Hello, I am a junior in the BS IT program concentrated in Cyber. I enjoy learning something new in IT and playing volleyball and running.</td>
       <td>Running, Traveling the World.</td>
     </tr>
